--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-grid",
+  "name": "angular-data-grid",
   "version": "0.1.0",
   "scripts": {
     "start": "gulp serve",
@@ -13,5 +13,29 @@
     "gulp-rimraf": "*",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2"
-  }
+  },
+  "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.5 compliant.",
+  "main": "index.html",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/angular-data-grid/angular-data-grid.github.io.git"
+  },
+  "keywords": [
+    "angular data grid",
+    "data grid",
+    "data grid for angular",
+    "ng-data-grid",
+    "ng-table",
+    "angular table",
+    "bootstra data grid",
+    "material design grid",
+    "data table"
+  ],
+  "author": "Alexander Zhuk <alexander.zhuk83@gmail.com> (https://github.com/angular-data-grid/angular-data-grid.github.io)",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/angular-data-grid/angular-data-grid.github.io/issues"
+  },
+  "homepage": "https://github.com/angular-data-grid/angular-data-grid.github.io#readme"
 }
