--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-grid",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "scripts": {
     "start": "gulp serve",
     "prebuild": "npm install"
@@ -14,7 +14,7 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2"
   },
-  "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.5 compliant.",
+  "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.6 compliant.",
   "main": "index.html",
   "devDependencies": {},
   "repository": {
@@ -23,12 +23,15 @@
   },
   "keywords": [
     "angular data grid",
+    "angular-data-grid",
+    "angular grid",
+    "angular-grid",
     "data grid",
     "data grid for angular",
     "ng-data-grid",
     "ng-table",
     "angular table",
-    "bootstra data grid",
+    "bootstrap data grid",
     "material design grid",
     "data table"
   ],
