--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "prebuild": "npm install"
   },
   "dependencies": {
+  },
+  "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.6 compliant.",
+  "main": "index.html",
+  "devDependencies": {
     "browser-sync": "^2.10.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -14,9 +18,6 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2"
   },
-  "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.6 compliant.",
-  "main": "index.html",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/angular-data-grid/angular-data-grid.github.io.git"
