--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "gulp serve",
     "prebuild": "npm install"
   },
-  "dependencies": {
+  "devDependencies": {
     "browser-sync": "^2.10.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -16,7 +16,7 @@
   },
   "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.6 compliant.",
   "main": "index.js",
-  "devDependencies": {},
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/angular-data-grid/angular-data-grid.github.io.git"
