--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-grid",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "gulp serve",
     "prebuild": "npm install"
@@ -11,7 +11,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "*",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": ">2.1.0",
     "gulp-uglify": "^1.4.2"
   },
   "description": "Light, flexible and performant Data Grid for AngularJS apps, with built-in sorting, pagination and filtering options, unified API for client-side and server-side data fetching, \r seamless synchronization with browser address bar and total freedom in mark-up and styling suitable for your application. Angular 1.3 - 1.6 compliant.",
